# create_book

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  404.html  README.md  index.html  package.json  render.yaml  sitemap.xml
auth-service/: .env.template  package.json
backend/: .env.template  .gitignore  README.md  alembic.ini  check_db.py  pyproject.toml  requirements.txt  seed_learning_content.py  seed_test_modules.py  test_questionnaire.py
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: chat.py  health.py
backend/app/models/: __init__.py  citation.py  conversation.py  message.py
backend/app/services/: openai_service.py  postgres_service.py  qdrant_service.py  rag_service.py
backend/app/utils/: error_handlers.py  logging.py
backend/scripts/: index_textbook.py  init_database.py  verify_credentials.py
backend/src/: main.py
backend/src/api/: content.py  profile.py  questionnaire.py
backend/src/api/middleware/: auth.py
backend/src/db/: database.py
backend/src/db/migrations/: env.py
backend/src/db/migrations/versions/: 20251230_2136_9100c8420884_create_application_tables.py  20251231_1308_4a6120444e0c_add_background_category_to_user_profile.py  20251231_1312_7e7f2e8f7977_add_target_background_to_learning_module.py
backend/src/models/: gdpr_request.py  learning_content.py  questionnaire.py  user_profile.py
backend/src/services/: profile.py  skill_calculator.py
frontend/: .env.template  README.md  next.config.js  package.json
intro/: index.html
main-site/: package.json  (+2 more)
(+475 files in other folders)
