[tool.poetry]
name = "backend"
version = "1.0.0"
description = "FastAPI backend for user profile and questionnaire management"
authors = []

[tool.poetry.dependencies]
python = "^3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
